--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ### Maven template
-target/
+target/*
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -17,3 +17,4 @@ buildNumber.properties
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
+*.class
